# defimcp

./: .replit  API_SUMMARY.md  PROJECT_CREDENTIALS.md  README.md  TECHNICAL_SPECS.md  ai_agent.py  ai_chat_assistant.py  ai_portfolio_doctor.py  ai_strategy_sommelier.py  app.py  main.py  mcp_server.py  models.py  portfolio_analytics.py  pyproject.toml  replit.md  routes.py  routes_simple.py  test_mcp_client.py  test_mcp_server.py
attached_assets/: Pasted--2025-08-07-03-44-56-0000-406-INFO-Starting-gunicorn-23-0-0-2025-08-07-03-44-56-0000-406--1754538698975_1754538698985.txt  Pasted--Hackathon-Winning-AI-Agent-Features-Current-Assessment-Your-foundation-is-solid--1754556139515_1754556139517.txt
blockchain/: ethereum.py  polygon.py  solana.py
config/: chains.yaml  protocols.yaml
defi_tools/: dex_operations.py  lending.py  portfolio.py  yield_farming.py
instance/: defi_mcp.db
static/css/: custom.css
static/js/: main.js
templates/: ai_agent.html  ai_features.html  api_docs.html  base.html  dashboard.html  index.html
utils/: testnet_helper.py  validation.py  wallet.py
