[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "eth-account>=0.13.7",
    "solders>=0.26.0",
    "cryptography>=45.0.5",
    "base58>=2.1.1",
    "requests>=2.32.4",
    "pyyaml>=6.0.2",
    "solana>=0.36.7",
    "sqlalchemy>=2.0.42",
    "werkzeug>=3.1.3",
    "web3>=7.13.0",
    "openai>=1.99.1",
]
